Numpy stuff is working, just need to get model set up!

--- a/Jupyter Notebook/Book-Age-Predictor.ipynb
+++ b/Jupyter Notebook/Book-Age-Predictor.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "'\\n# from gutenberg.acquire import load_metadata\\nfrom gutenberg.acquire import load_etext\\nfrom gutenberg.cleanup import strip_headers\\n\\nfrom gutenberg.query import get_etexts\\nfrom gutenberg.query import get_metadata\\n\\nfrom gutenberg.query import list_supported_metadatas\\n'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1579,16 +1579,16 @@
       "43.10479462751835 % complete\n",
       "43.26097141964704 % complete\n",
       "43.41714821177573 % complete\n",
-      "43.57332500390442 % complete\n",
-      "43.72950179603311 % complete\n",
-      "43.8856785881618 % complete\n",
-      "44.041855380290485 % complete\n"
+      "43.57332500390442 % complete\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "43.72950179603311 % complete\n",
+      "43.8856785881618 % complete\n",
+      "44.041855380290485 % complete\n",
       "44.198032172419175 % complete\n",
       "44.354208964547865 % complete\n",
       "44.510385756676556 % complete\n",
@@ -1867,15 +1867,15 @@
       "9.526784319850071 % complete\n",
       "9.68296111197876 % complete\n",
       "9.83913790410745 % complete\n",
-      "9.99531469623614 % complete\n",
-      "10.15149148836483 % complete\n",
-      "10.307668280493518 % complete\n"
+      "9.99531469623614 % complete\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "10.15149148836483 % complete\n",
+      "10.307668280493518 % complete\n",
       "10.463845072622208 % complete\n",
       "10.620021864750898 % complete\n",
       "10.776198656879588 % complete\n",
@@ -2070,7 +2070,7 @@
     "\n",
     "# if an etext is longer than the designated length, removes words to make it short enough\n",
     "def trim_etext(etext):\n",
-    "    return etext[:TEXT_LENGTH - 1]\n",
+    "    return etext[:TEXT_LENGTH]\n",
     "\n",
     "# fits all the etexts in trimmed_xxxx_etexts to be of uniform length\n",
     "def fit_etexts_to_size():\n",
@@ -2426,17 +2426,17 @@
       "45.13444302176696 % complete\n",
       "45.29449423815621 % complete\n",
       "45.45454545454545 % complete\n",
-      "45.6145966709347 % complete\n",
-      "45.774647887323944 % complete\n",
-      "45.934699103713186 % complete\n",
-      "46.094750320102435 % complete\n",
-      "46.25480153649168 % complete\n"
+      "45.6145966709347 % complete\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "45.774647887323944 % complete\n",
+      "45.934699103713186 % complete\n",
+      "46.094750320102435 % complete\n",
+      "46.25480153649168 % complete\n",
       "46.414852752880925 % complete\n",
       "46.57490396927017 % complete\n",
       "46.73495518565941 % complete\n",
@@ -2719,14 +2719,14 @@
       "91.06914212548016 % complete\n",
       "91.2291933418694 % complete\n",
       "91.38924455825864 % complete\n",
-      "91.54929577464789 % complete\n"
+      "91.54929577464789 % complete\n",
+      "91.70934699103714 % complete\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "91.70934699103714 % complete\n",
       "91.86939820742637 % complete\n",
       "92.02944942381562 % complete\n",
       "92.18950064020487 % complete\n",
@@ -2833,14 +2833,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "313865\n"
+      "313877\n"
      ]
     }
    ],
@@ -2851,57 +2851,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# vectorizes an entire etext with a simple integer encoding\n",
-    "# this feeds into the model, where the embedding layer will perform the word embeddings\n",
-    "def vectorize_etext(etext):\n",
-    "    return np.array([dictionary[word] for word in etext])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[   0    1    2 ... 1632 1632 1632]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(vectorize_etext(trimmed_male_etexts[0][0]))"
+    "# vectorize the whole dataset\n",
+    "vectorized_male_etexts = np.array([[dictionary[word] for word in etext] for etext, gender in trimmed_male_etexts])\n",
+    "vectorized_male_classes = np.array([gender for etext, gender in trimmed_male_etexts])\n",
+    "vectorized_female_etexts = np.array([[dictionary[word] for word in etext] for etext, gender in trimmed_female_etexts])\n",
+    "vectorized_female_classes = np.array([gender for etext, gender in trimmed_female_etexts])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# vectorize the whole dataset\n",
-    "vectorized_male_etexts = np.array([[vectorize_etext(etext), gender] for etext, gender in trimmed_male_etexts])\n",
-    "vectorized_female_etexts = np.array([[vectorize_etext(etext), gender] for etext, gender in trimmed_female_etexts])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4915, 2)\n",
-      "[   0    1    2 ... 1632 1632 1632]\n",
-      "(1333, 2)\n",
-      "[   23 23399   130 ...    36   311    47]\n"
+      "(4915, 10463)\n",
+      "0\n",
+      "(1333, 10463)\n",
+      "23\n",
+      "(4915,)\n"
      ]
     }
    ],
@@ -2909,7 +2883,33 @@
     "print(vectorized_male_etexts.shape)\n",
     "print(vectorized_male_etexts[0][0])\n",
     "print(vectorized_female_etexts.shape)\n",
-    "print(vectorized_female_etexts[0][0])"
+    "print(vectorized_female_etexts[0][0])\n",
+    "print(vectorized_male_classes.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: train-test split\n",
+    "# TWO OPTIONS: BALANCE GENDERS IN TRAINING SET AND HAVE ONLY 2400 IN TRAINING SET\n",
+    "# OR DON'T BALANCE GENDERS\n",
+    "# TODO: try both and see which one produces better results\n",
+    "test_train_split = 0.9\n",
+    "\n",
+    "n1, m1 = vectorized_female_etexts.shape\n",
+    "female_split = int(round(test_train_split * n1))\n",
+    "male_split = female_split\n",
+    "# n2, m2 = vectorized_male_etexts.shape\n",
+    "# male_test_train_split = int(round(test_train_split * n2))\n",
+    "\n",
+    "# together at first so we can keep corresponding x and y together during shuffling\n",
+    "x_train = np.concatenate((vectorized_male_etexts[:male_split], vectorized_female_etexts[:female_split]), axis=0)\n",
+    "y_train = np.concatenate((vectorized_male_classes[:male_split], vectorized_female_classes[:female_split]))\n",
+    "x_test = np.concatenate((vectorized_male_etexts[male_split:], vectorized_female_etexts[female_split:]), axis=0)\n",
+    "y_test = np.concatenate((vectorized_male_classes[male_split:], vectorized_female_classes[female_split:]))"
    ]
   },
   {
@@ -2918,8 +2918,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: train-test split\n",
-    "test_train_split = 0.9"
+    "#np.random.shuffle(xy_train)\n",
+    "#np.random.shuffle(xy_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2400, 10463) (2400,)\n",
+      "[   0    1    2 ... 1632 1632 1632]\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x_train.shape, y_train.shape)\n",
+    "print(x_train[0])\n",
+    "print(y_train[0])\n",
+    "print(type(x_train[0]))"
    ]
   },
   {
@@ -2940,7 +2963,7 @@
     "\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Embedding(vocab_size, embedding_size, input_length=10))\n",
+    "model.add(Embedding(vocab_size, embedding_size, input_length=sequence_length))\n",
     "# the model will take as input an integer matrix of size (batch,\n",
     "# input_length).\n",
     "# the largest integer (i.e. word index) in the input should be no larger\n",
@@ -2948,8 +2971,10 @@
     "# now model.output_shape == (None, 10, 64), where None is the batch\n",
     "# dimension.\n",
     "\n",
-    "# model.add(Conv2D(num_filters, filter_size, input_shape=(28, 28, 1)))\n",
-    "# model.add(MaxPooling2D(pool_size=pool_size))\n"
+    "model.add(Conv2D(num_filters, filter_size, input_shape=(28, 28, 1)))\n",
+    "model.add(MaxPooling2D(pool_size=pool_size))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(1, activation='softmax'))\n"
    ]
   },
   {
@@ -2961,7 +2986,7 @@
     "# compile the model\n",
     "model.compile(\n",
     "  'adam',\n",
-    "  loss='categorical_crossentropy',\n",
+    "  loss='binary_crossentropy',\n",
     "  metrics=['accuracy'],\n",
     ")"
    ]
@@ -2974,8 +2999,8 @@
    "source": [
     "# train the model\n",
     "model.fit(\n",
-    "  train_images,\n",
-    "  train_labels,\n",
+    "  x_train,\n",
+    "  y_train,\n",
     "    epochs=50\n",
     ")"
    ]
